# bds-sdk-generator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: CMakeLists.txt  DemangledSymbol.h  Logger.h  MemoryMappedFile..h  MemoryMappedFile.h  PDBUtils.h
include/PDB/: PDB_DBITypes.h  PDB_ModuleInfoStream.cpp  PDB_Types.h
lib/llvm/Demangle/: DLangDemangle.cpp  Demangle.cpp  ItaniumDemangle.cpp  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp  RustDemangle.cpp
src/: Logger.cpp  MemoryMappedFile.cpp  PDBUtils.cpp
